--- a/frontend/src/Home/Home.module..scss
+++ b/frontend/src/Home/Home.module..scss
@@ -19,6 +19,7 @@
   flex: 1;
   margin-left: 10px;
   margin-right: 10px;
+  background-color: green;
   border: 2px solid black;
 }
 img.sub-thumbnail {
@@ -26,3 +27,5 @@ img.sub-thumbnail {
   width: inherit;
   height: inherit;
 }
+
+/*xu li cac doi tuong thuoc bang tin tuc*/
