--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -15,7 +15,6 @@
   color: rgb(52, 50, 50);
 }
 
-
 .header {
   display: flex;
   justify-content: space-between;
@@ -31,6 +30,18 @@
   font-size: 35px;
   font-weight: 600;
   padding-left: 20px;
+  align-items: center;
+  text-align: center;
+  justify-items: center;
+}
+
+img {
+  width: inherit;
+  height: 40px;
+  box-shadow: 1px 1px 1px black;
+}
+
+.header .thumbnail {
   align-items: center;
 }
 
@@ -49,5 +60,4 @@
   .header {
     flex-direction: column;
   }
-
 }
