--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -19,10 +19,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 60px;
+  height: 100px;
   color: white;
   font-size: 16px;
   font-weight: 600;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .header .logo {
@@ -30,19 +32,16 @@
   font-size: 35px;
   font-weight: 600;
   padding-left: 20px;
+  margin-left: 180px;
   align-items: center;
   text-align: center;
   justify-items: center;
 }
 
 img {
-  width: inherit;
-  height: 40px;
-  box-shadow: 1px 1px 1px black;
-}
-
-.header .thumbnail {
-  align-items: center;
+  display: flex;
+  justify-content: center;
+  text-align: center;
 }
 
 .header .right {
