--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -1,118 +1,103 @@
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
 }
 
 .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 0;
 }
 
 .navbar a:hover {
-<<<<<<< HEAD
-  color: #487be7;
-=======
-  color: #9984f9;
->>>>>>> 20aab8f (Update UI from Home page, header and footer. Fixed show the image into the page. Add some effects forthe home page.)
+    color: #9984f9;
 }
 
 .hero {
-  text-align: center;
-  padding: 50px 10px;
-  background-color: #f7f7f7;
+    text-align: center;
+    padding: 50px 10px;
+    background-color: #f7f7f7;
 }
 
 .hero button {
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  margin: 5px;
-  padding: 10px;
-  border-radius: 9999px;
-  box-shadow: 0 0.5px 0.5px black;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    margin: 5px;
+    padding: 10px;
+    border-radius: 9999px;
+    box-shadow: 0 0.5px 0.5px black;
 }
+
 .hero button:hover {
-  background-color: #9984f9;
-  color: white;
+    background-color: #9984f9;
+    color: white;
 }
 
 .services,
 .about,
 .contact {
-  padding: 40px 20px;
+    padding: 40px 20px;
 }
 
 .about,
 .contact {
-  background-color: #f7f7f7;
+    background-color: #f7f7f7;
 }
 
 .about {
-  margin-top: 100px;
+    margin-top: 100px;
 }
 
 .sectionTitle {
-  text-align: center;
-  margin-bottom: 30px;
+    text-align: center;
+    margin-bottom: 30px;
 }
 
 /*xu li thanh phan card*/
 .cardsContainer {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .card {
-<<<<<<< HEAD
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  border-radius: 8px;
-  margin: 10px 10px 0;
-=======
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 1);
-  padding: 15px;
-  border-radius: 50px;
-  margin: 10px;
->>>>>>> 20aab8f (Update UI from Home page, header and footer. Fixed show the image into the page. Add some effects forthe home page.)
-  width: 300px;
-  height: auto;
-  transition:
-    width 0.3s,
+
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 1);
+    padding: 15px;
+    border-radius: 50px;
+    margin: 10px;
+    width: 300px;
+    height: auto;
+    transition: width 0.3s,
     height 0.3s;
-  transition-timing-function: linear;
+    transition-timing-function: linear;
 }
 
 .card:hover {
-  width: 330px;
-  height: calc(100%+20px);
+    width: 330px;
+    height: calc(100% + 20px);
 }
 
 img .cardThumbnail {
-  text-align: center;
-<<<<<<< HEAD
-  align-items: center;
-  height: 50%;
-=======
-  border-radius: 40px;
->>>>>>> 20aab8f (Update UI from Home page, header and footer. Fixed show the image into the page. Add some effects forthe home page.)
+    text-align: center;
+    border-radius: 40px;
 }
 
 .cardTitle {
-  margin-top: 10px;
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: bold;
+    margin-top: 10px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 .cardContent {
-  text-align: left;
-  padding-top: 20px;
+    text-align: left;
+    padding-top: 20px;
 }
 
 /*Xu li cac thanh phan news va promotion*/
 .info {
-  display: flex;
-  justify-content: space-around;
+    display: flex;
+    justify-content: space-around;
 }
