Update: fixed some old error

--- a/frontend/src/components/Dropdown/UserMenu.module.scss
+++ b/frontend/src/components/Dropdown/UserMenu.module.scss
@@ -10,7 +10,7 @@
   border-radius: 4px;
 
   &:hover {
-    background-color: #1D4ED8;
+    background-color: #1d4ed8;
   }
 }
 
@@ -34,7 +34,6 @@
   color: white;
   font-weight: 600;
 }
-
 
 .icon {
   color: #666;
