--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -29,7 +29,7 @@
 
 .header .brand {
   display: flex;
-  justify-content: normal;
+  justify-content: space-around;
 }
 
 .header .brand .logo {
@@ -37,7 +37,7 @@
   font-size: 35px;
   font-weight: 600;
   padding-left: 20px;
-  margin-left: 180px;
+  margin-left: 100px;
   align-items: center;
   text-align: center;
 }
