--- a/frontend/src/components/Header/Header.module.scss
+++ b/frontend/src/components/Header/Header.module.scss
@@ -43,7 +43,7 @@
 }
 
 img {
-  box-shadow: 0.4px 0.5px 0.5px rgb(65, 65, 65);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 1);
 }
 
 .header .brand .thumbnail {
