--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -26,7 +26,7 @@
   margin: 5px;
   padding: 10px;
   border-radius: 9999px;
-  box-shadow: 0 0.5px 0.5px black;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 1);
 }
 
 .hero button:hover {
@@ -43,10 +43,10 @@
 .about,
 .contact {
   background-color: #f7f7f7;
-}
-
-.about {
   margin-top: 100px;
+  margin-bottom: 100px;
+  border-radius: 10px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 1);
 }
 
 .sectionTitle {
@@ -64,12 +64,12 @@
 .card,
 .cardNews,
 .cardPromotion {
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 1);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 1);
   padding: 15px;
   border-radius: 40px;
   margin: 15px;
   width: 300px;
-  height: auto;
+  height: 550px;
   font-size: 17px;
   transition:
     width 0.3s,
@@ -81,7 +81,7 @@
 .card:hover {
   width: 330px;
   font-size: 19px;
-  height: calc(100% + 20px);
+  height: 600px;
 }
 
 img.cardThumbnail {
